<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jogoler.android.bakingapp.fragment.RecipeFragment">

    <!-- TODO: Update blank fragment layout -->
   <android.support.v7.widget.RecyclerView
       android:id="@+id/recipe_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

   </android.support.v7.widget.RecyclerView>

</FrameLayout>
