<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.jogoler.android.bakingapp.fragment.RecipeStepDetailFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_exo_view"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="200dp">

    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <ImageView
        android:id="@+id/thumbnail_image_view"
        android:layout_gravity="center"
        android:elevation="1dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/recipe_step_detail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="0.5"
            android:id="@+id/previous_button"
            android:text="@string/previous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="0.5"
            android:id="@+id/next_button"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>



</LinearLayout>
